syntax = "proto3";

package skopa.notifier;

import "common.proto";

service NotifierService {
    rpc Add (AddNotificationRequest) returns (common.SuccessResponse);
}

message NotifyRequest {
    string title = 1;
    string description = 2;
}

message AddNotificationRequest {
    NotifyRequest notification = 1;
    string sendType = 2;
}